Two questions have been answered

--- a/index.html
+++ b/index.html
@@ -77,6 +77,23 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
+        <section class="container">
+            <h3>how does javascript script work</h3>
+            <p>When the browser receives the code that we write, we have to translate that code into the language of the machine to be understood by the computer. And this work interprets the line book line with the engine called Google Chrome V8 and converts it into machine language using a (just-in-time) compiler inside. The computer then shows the output. When a function is called (just-in-time) that instruction will be converted into machine code and executed.</p>
+            
+            <h3>Difference between local storage and session storage</h3>
+            <p>Local storage data is permanent but session storage data is temporary. Data must be deleted manually from local storage but in the case of session storage, if it is closed in browser or tab then all data in session storage is deleted. Local storage does not work for specific tabs, it works for all tabs, but session storage works for specific tabs, and data is lost when tabs are closed.</p>
+
+            <h5>Both storage objects provide the same method and features:</h5>
+            <ul>
+                <li>setItem(key, value)-Store key / value pair.</li>
+                <li>getItem(key)- Get value by key.</li>
+                <li>removeItem(key) - Remove key by value.</li>
+                <li>clear() - Delete everything.</li>
+                <li>key(index) - Find the key to a specific position.</li>
+                <li>length The total number of items stored.</li>
+            </ul>
+        </section>
         <footer></footer>
 
         <!-- add javascript  file  -->
