Ready for deploy

--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
-        <section class="container">
+        <section id="questions" class="container">
             <h3>how does javascript script work</h3>
             <p>When the browser receives the code that we write, we have to translate that code into the language of the machine to be understood by the computer. And this work interprets the line book line with the engine called Google Chrome V8 and converts it into machine language using a (just-in-time) compiler inside. The computer then shows the output. When a function is called (just-in-time) that instruction will be converted into machine code and executed.</p>
-            
+            <h5>Execution context:</h5>
+            <p>When JavaScript interprets code, it breaks the code into smaller pieces to reduce the complexity of the code. This small part is called execution context</p>
+
             <h3>Difference between local storage and session storage</h3>
             <p>Local storage data is permanent but session storage data is temporary. Data must be deleted manually from local storage but in the case of session storage, if it is closed in browser or tab then all data in session storage is deleted. Local storage does not work for specific tabs, it works for all tabs, but session storage works for specific tabs, and data is lost when tabs are closed.</p>
 
